--- a/locales/zh.json
+++ b/locales/zh.json
@@ -6,5 +6,8 @@
     "hello": "你好!<div>这里是一个div</div>",
     "lastUpdated": "This example was updated {lastUpdatedRelative} ({lastUpdated, date, short}).",
     "params": "我要在这里传递一些参数： {params}， {otherParams}"
+  },
+  "Index": {
+    "allBlog": "Blog-1"
   }
 }
