feat: 添加styled-components, 添加动画模块

--- a/locales/en.json
+++ b/locales/en.json
@@ -8,6 +8,8 @@
     "params": "我要在这里传递一些参数： {params}， {otherParams}"
   },
   "Index": {
-    "allBlog": "Blog"
+    "allBlog": "Blog",
+    "nav1": "blog",
+    "nav2": "animation"
   }
 }
