--- a/src/locales/index/en.json
+++ b/src/locales/index/en.json
@@ -1,7 +1,7 @@
 {
   "Index": {
-    "allBlog": "Blog1",
-    "nav1": "blog1",
-    "nav2": "animation1"
+    "allBlog": "Blog",
+    "nav1": "blog",
+    "nav2": "animation"
   }
 }
