--- a/src/locales/index/zh.json
+++ b/src/locales/index/zh.json
@@ -1,7 +1,7 @@
 {
   "Index": {
-    "allBlog": "博客1",
-    "nav1": "博客1",
-    "nav2": "动画1"
+    "allBlog": "博客",
+    "nav1": "博客",
+    "nav2": "动画"
   }
 }
